--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts --trace-warnings",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "cross-env NODE_ENV=test jest"
   },
@@ -20,7 +20,8 @@
     "multer": "^1.4.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -29,6 +30,7 @@
     "@types/jest": "^25.2.1",
     "@types/multer": "^1.4.2",
     "@types/supertest": "^2.0.8",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "cross-env": "^7.0.2",
