--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "desafio-06",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": {"node": "16.x"},
+  "engines": {"node": "13.x"},
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly  src/server.ts",
-    "start": "ts-node src/server.ts",
+    "start": "ts-node-dev src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "cross-env NODE_ENV=test jest"
   },
